refactor: update db changes